@@ -60,8 +60,10 @@ Legend:
   - fixed VMR9 D3DFS minimizing when losing focus
   - fixed thumb mouse buttons not working when D3DFS has focus
 ! Various fixes for better playlist support
+! Fixed creation date in file properties always being shown as "Not known"
 ! Ticket #2109, #2975, Fix the handling of aspect ratio changes when using EVR-CP or
   Sync Renderer with DXVA decoding
 ! Ticket #3304, Fix remembering file position when double-clicking on a playlist item.
   If a position was previously saved, it will be restored unless the file is already playing.
-! Fixed creation date in file properties always being shown as "Not known"
+! Ticket #3440, Disable the "Explore to" feature when the file isn't local in the Properties dialog
+  and the playlist context menu
